fix word-wrap text sua-pagina

--- a/api/app/assets/stylesheets/site/user.scss
+++ b/api/app/assets/stylesheets/site/user.scss
@@ -176,6 +176,7 @@ body.profile {
                 letter-spacing: 0.1px;
                 color: #000000;
                 margin: 10px 0px 30px 0px;
+                word-wrap: break-word;
             }
         }
         .social {
